--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="part-name">
                 <p>You: <span class="score" id="scoreHuman"></span></p> 
             </div>
-            <div class="status">One</div>
+            <div class="status"></div>
             <div class="rock"><p class="choice">Rock</p></div>
             <div class="paper"><p class="choice">Paper</p></div>
             <div class="scissors"><p class="choice">Scissors</p></div>
@@ -29,7 +29,7 @@
             <div class="part-name">
                 <p>Computer: <span class="score" id="scoreComputer"></span></p>
             </div>
-            <div class="status">Two</div>
+            <div class="status"></div>
             <div class="rock"><p class="choice">Rock</p></div>
             <div class="paper"><p class="choice">Paper</p></div>
             <div class="scissors"><p class="choice">Scissors</p></div>
